# rag-processor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PLUGIN_DEVELOPMENT.md  PROJECT_HANDOVER.md  README.md  SETUP.md  catalog.rag  pyproject.toml  setup.py
config/: constants.py
plugins/: __init__.py
plugins/delivery/: __init__.py
plugins/delivery/supabase/: README.md  __init__.py  base.py  openai_embeddings.py  requirements.txt
plugins/source/: __init__.py
plugins/source/csv/: README.md  __init__.py  converter.py  requirements.txt
rag_processor/: __init__.py  __main__.py
rag_processor/clients/: __init__.py  base.py  default.py
rag_processor/core/: __init__.py  analyzer.py  processor.py  validator.py
rag_processor/delivery/: __init__.py  supabase_provider.py
rag_processor/strategies/: __init__.py  article.py  base.py  code.py  faq.py  legal.py  manual.py  products.py  structured_blocks.py
rag_processor/utils/: __init__.py  directive_parser.py  text_utils.py
tests/: __init__.py  conftest.py  test_current_system.py
tests/integration/: test_cli.py  test_processor.py
tests/unit/: test_analyzer.py  test_directive_parser.py  test_strategies.py  test_validator.py
